--- a/home/src/main/res/layout/activity_home.xml
+++ b/home/src/main/res/layout/activity_home.xml
@@ -20,7 +20,11 @@
         android:id="@+id/homeNavHostFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbarApp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav_home"
         app:defaultNavHost="true"
         app:navGraph="@navigation/home_nav_host" />
 
@@ -28,6 +32,8 @@
         android:id="@+id/bottom_nav_home"
         android:layout_width="0dp"
         android:layout_height="56dp"
+        android:background="?attr/colorPrimary"
+        app:titleTextColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
