--- a/home/src/main/res/layout/activity_home.xml
+++ b/home/src/main/res/layout/activity_home.xml
@@ -32,7 +32,8 @@
         android:id="@+id/bottom_nav_home"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/white"
+        app:menu="@menu/menu_items"
         app:titleTextColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
