--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="primary">#FF9161FF</color>
+    <color name="secondary">#FF4767F9</color>
+    <color name="background_little_dark">#FF192039</color>
+    <color name="background_dark">#FF101424</color>
+    <color name="background_backup">#FFE1E1E1</color>
+    <color name="background_light">#FFF8F8F8</color>
+    <color name="green">#FF5ACA73</color>
+    <color name="pink">#FFFE54A1</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
