--- a/home/src/main/res/layout/activity_home.xml
+++ b/home/src/main/res/layout/activity_home.xml
@@ -10,8 +10,9 @@
         android:id="@+id/toolbarApp"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/background_dark"
         app:layout_constraintEnd_toEndOf="parent"
+        app:navigationIcon="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@android:color/white" />
@@ -21,6 +22,7 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/background_little_dark"
         app:layout_constraintTop_toBottomOf="@id/toolbarApp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,8 +34,10 @@
         android:id="@+id/bottom_nav_home"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:background="@color/white"
+        android:background="@color/background_dark"
         app:menu="@menu/menu_items"
+        app:itemIconTint="@color/secondary"
+        app:itemTextColor="@color/secondary"
         app:titleTextColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
