--- a/match/src/main/res/navigation/match_nav_host.xml
+++ b/match/src/main/res/navigation/match_nav_host.xml
@@ -2,9 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/match_nav_host">
+    android:id="@+id/match_nav_host"
+    app:startDestination="@id/matchFragment">
 
     <fragment android:id="@+id/matchFragment"
+        android:label="Match"
         android:name="com.example.match.presentation.MatchFragment"
         tools:layout="@layout/fragment_match"/>
 
