--- a/team/src/main/res/navigation/team_nav_host.xml
+++ b/team/src/main/res/navigation/team_nav_host.xml
@@ -2,9 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/team_nav_host">
+    android:id="@+id/team_nav_host"
+    app:startDestination="@id/teamFragment">
 
     <fragment android:id="@+id/teamFragment"
+        android:label="Team"
         android:name="com.example.team.presentation.TeamFragment"
         tools:layout="@layout/fragment_team" />
 
