--- a/home/src/main/res/menu/menu_items.xml
+++ b/home/src/main/res/menu/menu_items.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/ic_sword"
         android:title="@string/match" />
     <item
-        android:id="@+id/team_nav_host"
+        android:id="@+id/players_nav_host"
         android:icon="@drawable/ic_my_team"
         android:title="@string/team" />
 
