--- a/account/src/main/res/layout/activity_account.xml
+++ b/account/src/main/res/layout/activity_account.xml
@@ -7,6 +7,7 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_dark"
         app:defaultNavHost="true"
         app:navGraph="@navigation/account_nav_host" />
 
