--- a/home/src/main/res/menu/menu_items.xml
+++ b/home/src/main/res/menu/menu_items.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
     <item
-        android:id="@+id/search_menu"
+        android:id="@+id/accountActivity"
         android:icon="@drawable/ic_search"
         android:title="@string/search" />
     <item
