--- a/account/src/main/res/navigation/account_nav_host.xml
+++ b/account/src/main/res/navigation/account_nav_host.xml
@@ -5,15 +5,32 @@
     android:id="@+id/account_nav_host"
     app:startDestination="@id/signInFragment">
 
-    <fragment android:id="@+id/accountFragment"
+    <fragment
+        android:id="@+id/accountFragment"
         android:name="br.com.tournaments.account.AccountFragment"
         tools:layout="@layout/fragment_account">
 
-        <action android:id="@+id/accountFragment_to_SignIn"
-            app:destination="@id/signInFragment"/>
+        <action
+            android:id="@+id/accountFragment_to_SignIn"
+            app:destination="@id/signInFragment" />
     </fragment>
 
-    <fragment android:id="@+id/signInFragment"
-        android:name="br.com.tournaments.account.signin.presentation.SignInFragment"/>
+    <fragment
+        android:id="@+id/signInFragment"
+        android:name="br.com.tournaments.account.signin.presentation.SignInFragment">
 
+        <action
+            android:id="@+id/navToSignUp"
+            app:destination="@id/signUpFragment"
+            />
+    </fragment>
+
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="br.com.tournaments.account.signup.presentation.SignUpFragment">
+
+        <action
+            android:id="@+id/navToSignIn"
+            app:destination="@id/signInFragment" />
+    </fragment>
 </navigation>
