--- a/match/src/main/res/navigation/match_nav_host.xml
+++ b/match/src/main/res/navigation/match_nav_host.xml
@@ -7,7 +7,7 @@
 
     <fragment android:id="@+id/matchFragment"
         android:label="Match"
-        android:name="com.example.match.presentation.MatchFragment"
+        android:name="br.com.tournaments.match.presentation.MatchFragment"
         tools:layout="@layout/fragment_match"/>
 
 </navigation>
